fix class wrap

--- a/index.css
+++ b/index.css
@@ -35,11 +35,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 0 18.8vw;
+    max-width: 1200px;
+    margin: auto;
 }
 
-.wrap--header {
-    margin: 0 17.8vw 0 18.8vw;
+.wrap--header { 
     justify-content: space-between;
 }
 
